--- a/notebooks/build_2_dash_app.ipynb
+++ b/notebooks/build_2_dash_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Population_of_England_millions</th>\n",
+       "      <th>Total_Arable_and_Sown_Acreage</th>\n",
+       "      <th>Wheat_Bushels_per_Acre</th>\n",
+       "      <th>Rye_Bushels_per_Acre</th>\n",
+       "      <th>Barley_Bushels_per_Acre</th>\n",
+       "      <th>Oats_Bushels_per_Acre</th>\n",
+       "      <th>Pulses_Bushels_per_Acre</th>\n",
+       "      <th>Wheat_Million_Bushels</th>\n",
+       "      <th>Rye_Million_Bushels</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Net_Emigration_England_000s</th>\n",
+       "      <th>Sacks_of_Wool_Thousands</th>\n",
+       "      <th>Total_doth_equivalent</th>\n",
+       "      <th>Decline_in_export_volume</th>\n",
+       "      <th>English_export_volumes</th>\n",
+       "      <th>Consumer_price_inflation</th>\n",
+       "      <th>Filtered_Log_of_Real_GDP_Hodrick_Prescott</th>\n",
+       "      <th>Average_Weekly_Earning_UK</th>\n",
+       "      <th>Average_Weekly_Work_Hours</th>\n",
+       "      <th>Trade_Volumes_in_UK</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1270</td>\n",
+       "      <td>4.364903</td>\n",
+       "      <td>12.521372</td>\n",
+       "      <td>7.453349</td>\n",
+       "      <td>9.200467</td>\n",
+       "      <td>11.438873</td>\n",
+       "      <td>11.191148</td>\n",
+       "      <td>1.828758</td>\n",
+       "      <td>16.442739</td>\n",
+       "      <td>7.110387</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.09</td>\n",
+       "      <td>-1.08</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>45.04</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1271</td>\n",
+       "      <td>4.371751</td>\n",
+       "      <td>12.525191</td>\n",
+       "      <td>6.728061</td>\n",
+       "      <td>11.504579</td>\n",
+       "      <td>13.016335</td>\n",
+       "      <td>10.514148</td>\n",
+       "      <td>1.578589</td>\n",
+       "      <td>14.903160</td>\n",
+       "      <td>8.864022</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.09</td>\n",
+       "      <td>-1.90</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>45.01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1272</td>\n",
+       "      <td>4.378609</td>\n",
+       "      <td>12.529016</td>\n",
+       "      <td>9.779587</td>\n",
+       "      <td>11.533904</td>\n",
+       "      <td>12.211065</td>\n",
+       "      <td>9.009052</td>\n",
+       "      <td>0.678903</td>\n",
+       "      <td>21.750552</td>\n",
+       "      <td>8.859456</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.06</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>44.99</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1273</td>\n",
+       "      <td>4.385478</td>\n",
+       "      <td>12.532846</td>\n",
+       "      <td>6.895819</td>\n",
+       "      <td>6.192996</td>\n",
+       "      <td>11.499594</td>\n",
+       "      <td>10.095821</td>\n",
+       "      <td>1.068811</td>\n",
+       "      <td>15.399003</td>\n",
+       "      <td>4.742375</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-17.02</td>\n",
+       "      <td>-3.55</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>44.96</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1274</td>\n",
+       "      <td>4.392357</td>\n",
+       "      <td>12.536683</td>\n",
+       "      <td>6.325744</td>\n",
+       "      <td>9.845428</td>\n",
+       "      <td>10.483730</td>\n",
+       "      <td>10.042227</td>\n",
+       "      <td>3.888762</td>\n",
+       "      <td>14.183093</td>\n",
+       "      <td>7.516020</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.59</td>\n",
+       "      <td>-3.59</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>44.93</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 87 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Population_of_England_millions  Total_Arable_and_Sown_Acreage  \\\n",
+       "0  1270                        4.364903                      12.521372   \n",
+       "1  1271                        4.371751                      12.525191   \n",
+       "2  1272                        4.378609                      12.529016   \n",
+       "3  1273                        4.385478                      12.532846   \n",
+       "4  1274                        4.392357                      12.536683   \n",
+       "\n",
+       "   Wheat_Bushels_per_Acre  Rye_Bushels_per_Acre  Barley_Bushels_per_Acre  \\\n",
+       "0                7.453349              9.200467                11.438873   \n",
+       "1                6.728061             11.504579                13.016335   \n",
+       "2                9.779587             11.533904                12.211065   \n",
+       "3                6.895819              6.192996                11.499594   \n",
+       "4                6.325744              9.845428                10.483730   \n",
+       "\n",
+       "   Oats_Bushels_per_Acre  Pulses_Bushels_per_Acre  Wheat_Million_Bushels  \\\n",
+       "0              11.191148                 1.828758              16.442739   \n",
+       "1              10.514148                 1.578589              14.903160   \n",
+       "2               9.009052                 0.678903              21.750552   \n",
+       "3              10.095821                 1.068811              15.399003   \n",
+       "4              10.042227                 3.888762              14.183093   \n",
+       "\n",
+       "   Rye_Million_Bushels  ...  Net_Emigration_England_000s  \\\n",
+       "0             7.110387  ...                          NaN   \n",
+       "1             8.864022  ...                          NaN   \n",
+       "2             8.859456  ...                          NaN   \n",
+       "3             4.742375  ...                          NaN   \n",
+       "4             7.516020  ...                          NaN   \n",
+       "\n",
+       "   Sacks_of_Wool_Thousands  Total_doth_equivalent  Decline_in_export_volume  \\\n",
+       "0                      NaN                    NaN                       NaN   \n",
+       "1                      NaN                    NaN                       NaN   \n",
+       "2                      NaN                    NaN                       NaN   \n",
+       "3                      NaN                    NaN                       NaN   \n",
+       "4                      NaN                    NaN                       NaN   \n",
+       "\n",
+       "   English_export_volumes  Consumer_price_inflation  \\\n",
+       "0                     NaN                     -2.09   \n",
+       "1                     NaN                     26.09   \n",
+       "2                     NaN                      5.06   \n",
+       "3                     NaN                    -17.02   \n",
+       "4                     NaN                     13.59   \n",
+       "\n",
+       "   Filtered_Log_of_Real_GDP_Hodrick_Prescott  Average_Weekly_Earning_UK  \\\n",
+       "0                                      -1.08                      0.029   \n",
+       "1                                      -1.90                      0.030   \n",
+       "2                                       2.02                      0.025   \n",
+       "3                                      -3.55                      0.029   \n",
+       "4                                      -3.59                      0.030   \n",
+       "\n",
+       "   Average_Weekly_Work_Hours  Trade_Volumes_in_UK  \n",
+       "0                      45.04                  NaN  \n",
+       "1                      45.01                  NaN  \n",
+       "2                      44.99                  NaN  \n",
+       "3                      44.96                  NaN  \n",
+       "4                      44.93                  NaN  \n",
+       "\n",
+       "[5 rows x 87 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,51 +289,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((384, 87), (121, 87), (96, 87))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# shape of train, val and test\n",
+    "train.shape, val.shape, test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# target and features\n",
+    "X = train[['Year', 'Annual_inflation_rate']]\n",
+    "y = train[['Real_consumption_earnings_Growth_GB']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy 0.6413599083810859\n"
+      "Validation Accuracy 0.8668579301111693\n"
      ]
     }
    ],
    "source": [
-    "# target\n",
-    "target = 'Real_consumption_earnings_Growth_GB'\n",
-    "\n",
-    "# drop target feature\n",
-    "train_features = train.drop(columns=[target,'Growth_consumption_earnings','Consumer_price_inflation'])\n",
-    "\n",
-    "# get list of numeric features\n",
-    "numeric_features = train_features.select_dtypes(include='number').columns.tolist()\n",
-    "\n",
-    "# combine numeric and categorical\n",
-    "features = numeric_features\n",
-    "\n",
-    "# Arrange data into X features matrix and y target vector \n",
-    "X_train = train[features]\n",
-    "y_train = train[target]\n",
-    "X_val = val[features]\n",
-    "y_val = val[target]\n",
-    "X_test = test[features]\n",
-    "\n",
     "# pipeline\n",
     "pipeline = make_pipeline(\n",
     "    SimpleImputer(missing_values=np.nan , strategy='median'),\n",
-    "    DecisionTreeRegressor(max_depth=2)\n",
+    "    DecisionTreeRegressor(max_depth=7)\n",
     ")\n",
     "\n",
     "# pipeline fit and validtion score\n",
-    "pipeline.fit(X_train, y_train)\n",
-    "print('Validation Accuracy', pipeline.score(X_val, y_val))"
+    "pipeline.fit(X, y)\n",
+    "print('Validation Accuracy', pipeline.score(X, y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +355,7 @@
        "['pipeline.joblib']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
