--- a/notebooks/build_2_dash_app.ipynb
+++ b/notebooks/build_2_dash_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('https://raw.githubusercontent.com/andronikmk/dash-template/master/uk_data_v7.csv')"
+    "df = pd.read_csv('/home/andronik/uk-data-dash-app/data/uk_data_v7.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {
     "scrolled": false
    },
@@ -265,7 +265,7 @@
        "[5 rows x 87 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "((384, 87), (121, 87), (96, 87))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,25 +310,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# target and features\n",
-    "X = train[['Year', 'Annual_inflation_rate']]\n",
-    "y = train[['Real_consumption_earnings_Growth_GB']]"
+    "X = df[['Year', 'Annual_inflation_rate']]\n",
+    "y = df[['Real_consumption_earnings_Growth_GB']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((601, 2), (601, 1))"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# X and y shape\n",
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy 0.8668579301111693\n"
+      "Validation Accuracy 0.8888575718952249\n"
      ]
     }
    ],
@@ -336,7 +357,7 @@
     "# pipeline\n",
     "pipeline = make_pipeline(\n",
     "    SimpleImputer(missing_values=np.nan , strategy='median'),\n",
-    "    DecisionTreeRegressor(max_depth=7)\n",
+    "    DecisionTreeRegressor(max_depth=8)\n",
     ")\n",
     "\n",
     "# pipeline fit and validtion score\n",
@@ -346,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +376,7 @@
        "['pipeline.joblib']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
