--- a/notebooks/build_2_dash_app.ipynb
+++ b/notebooks/build_2_dash_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/home/andronik/uk-data-dash-app/data/uk_data_v7.csv')"
+    "df = pd.read_csv('https://raw.githubusercontent.com/andronikmk/dash-template/master/uk_data_v7.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "metadata": {
     "scrolled": false
    },
@@ -265,7 +265,7 @@
        "[5 rows x 87 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "((384, 87), (121, 87), (96, 87))"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "((601, 2), (601, 1))"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,14 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy 0.8888575718952249\n"
+      "Validation Accuracy 0.842533885791463\n"
      ]
     }
    ],
@@ -357,7 +357,7 @@
     "# pipeline\n",
     "pipeline = make_pipeline(\n",
     "    SimpleImputer(missing_values=np.nan , strategy='median'),\n",
-    "    DecisionTreeRegressor(max_depth=8)\n",
+    "    DecisionTreeRegressor(max_depth=7)\n",
     ")\n",
     "\n",
     "# pipeline fit and validtion score\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "['pipeline.joblib']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
