--- a/notebooks/Load_a_pipeline_saved_to_disk.ipynb
+++ b/notebooks/Load_a_pipeline_saved_to_disk.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from joblib import load\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pipeline = load('pipeline.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +44,7 @@
        "         verbose=False)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,40 +55,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "def predict(Year, Annual_inflation_rate):\n",
+    "def predict(year, continent):\n",
     "    df = pd.DataFrame(\n",
     "        columns=['Year', 'Annual_inflation_rate'], \n",
-    "        data=[[Year, Annual_inflation_rate]]\n",
+    "        data=[[year, continent]]\n",
     "    )\n",
-    "    y_pred = pipeline.predict(df)[0]\n",
-    "    return f'{y_pred:.0f} Years'"
+    "    y_pred = pipeline.predict(X)[0]\n",
+    "    return f'{y_pred:.0f} years'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('https://raw.githubusercontent.com/andronikmk/dash-template/master/uk_data_v7.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[['Year', 'Annual_inflation_rate']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'5 Years'"
+       "'-0 years'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict(1800, -7)"
+    "predict(1770, 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
