--- a/notebooks/dash_app_build_2.ipynb
+++ b/notebooks/dash_app_build_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -265,7 +263,7 @@
        "[5 rows x 87 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +296,7 @@
        "((384, 87), (121, 87), (96, 87))"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,18 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# target and features\n",
-    "X = df[['Year', 'Annual_inflation_rate']]\n",
-    "y = df[['Real_consumption_earnings_Growth_GB']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +317,84 @@
        "((601, 2), (601, 1))"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# target and features\n",
+    "X = df[['Year', 'Annual_inflation_rate']]\n",
+    "y = df[['Real_consumption_earnings_Growth_GB']]\n",
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy 0.6875534527373961\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['pipeline.joblib']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "####################\n",
+    "### Revised code ###\n",
+    "####################\n",
+    "\n",
+    "features = ['Year', 'Annual_inflation_rate']\n",
+    "target = 'Real_consumption_earnings_Growth_GB'\n",
+    "\n",
+    "X_train = train[features]\n",
+    "y_train = train[target]\n",
+    "\n",
+    "X_val = val[features]\n",
+    "y_val = val[target]\n",
+    "\n",
+    "X_test = test[features]\n",
+    "y_test = test[target]\n",
+    "\n",
+    "# pipeline\n",
+    "pipeline = make_pipeline(\n",
+    "    SimpleImputer(missing_values=np.nan , strategy='median'),\n",
+    "    DecisionTreeRegressor(max_depth=3)\n",
+    ")\n",
+    "\n",
+    "# pipeline fit and validtion score\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "print('Validation Accuracy', pipeline.score(X_val, y_val))\n",
+    "\n",
+    "from joblib import dump\n",
+    "dump(pipeline, 'pipeline.joblib', compress=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((601, 2), (601, 1))"
+      ]
+     },
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +440,7 @@
        "['pipeline.joblib']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
